tests/paczka1/fuzzy1/96116583.err
Error in line 2: 3jA9G S584 47,6
Error in line 8: S198 S584 5,8
Error in line 17: S198 S453 69,7
Error in line 22: 3jA9G S584 63,7
Error in line 14: bPU S584 119,6
Error in line 34: UG S198 73,0
Error in line 32: koWJGMu S584 263,0
